// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateTests can generate fixture ARRAY_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/ARRAY_PROPS/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/components/view/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ArrayPropsNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ArrayPropsNativeComponentProps>();
  ArrayPropsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ArrayPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ArrayPropsNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ArrayPropsNativeComponentProps>();
  ArrayPropsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ArrayPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/BOOLEAN_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(BooleanPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<BooleanPropNativeComponentProps>();
  BooleanPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  BooleanPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(BooleanPropNativeComponentProps_disabled, etc) {
  RawPropsParser propParser{};
  propParser.prepare<BooleanPropNativeComponentProps>();
  BooleanPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  BooleanPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture COLOR_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/COLOR_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ColorPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ColorPropNativeComponentProps>();
  ColorPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ColorPropNativeComponentProps_tintColor, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ColorPropNativeComponentProps>();
  ColorPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"tintColor\\", 1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture COMMANDS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/COMMANDS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(CommandNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<CommandNativeComponentProps>();
  CommandNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  CommandNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/COMMANDS_AND_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(CommandNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<CommandNativeComponentProps>();
  CommandNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  CommandNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(CommandNativeComponentProps_accessibilityHint, etc) {
  RawPropsParser propParser{};
  propParser.prepare<CommandNativeComponentProps>();
  CommandNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"accessibilityHint\\", \\"foo\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  CommandNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture DIMENSION_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/DIMENSION_PROP/Props.h>
#include <react/renderer/components/view/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(DimensionPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<DimensionPropNativeComponentProps>();
  DimensionPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  DimensionPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/DOUBLE_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(DoublePropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<DoublePropNativeComponentProps>();
  DoublePropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  DoublePropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(EventsNestedObjectNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<EventsNestedObjectNativeComponentProps>();
  EventsNestedObjectNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  EventsNestedObjectNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(EventsNestedObjectNativeComponentProps_disabled, etc) {
  RawPropsParser propParser{};
  propParser.prepare<EventsNestedObjectNativeComponentProps>();
  EventsNestedObjectNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  EventsNestedObjectNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EVENT_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EVENT_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(EventsNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<EventsNativeComponentProps>();
  EventsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  EventsNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(EventsNativeComponentProps_disabled, etc) {
  RawPropsParser propParser{};
  propParser.prepare<EventsNativeComponentProps>();
  EventsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  EventsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(InterfaceOnlyComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<InterfaceOnlyComponentProps>();
  InterfaceOnlyComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  InterfaceOnlyComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EXCLUDE_ANDROID/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ExcludedAndroidComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ExcludedAndroidComponentProps>();
  ExcludedAndroidComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ExcludedAndroidComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EXCLUDE_ANDROID_IOS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ExcludedAndroidIosComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ExcludedAndroidIosComponentProps>();
  ExcludedAndroidIosComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ExcludedAndroidIosComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ExcludedIosComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ExcludedIosComponentProps>();
  ExcludedIosComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ExcludedIosComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFileIncludedNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiFileIncludedNativeComponentProps>();
  MultiFileIncludedNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiFileIncludedNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFileIncludedNativeComponentProps_disabled, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiFileIncludedNativeComponentProps>();
  MultiFileIncludedNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"disabled\\", true));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiFileIncludedNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture FLOAT_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/FLOAT_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(FloatPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<FloatPropNativeComponentProps>();
  FloatPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius, etc) {
  RawPropsParser propParser{};
  propParser.prepare<FloatPropNativeComponentProps>();
  FloatPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"blurRadius\\", 0));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius2, etc) {
  RawPropsParser propParser{};
  propParser.prepare<FloatPropNativeComponentProps>();
  FloatPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"blurRadius2\\", 0.001));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius3, etc) {
  RawPropsParser propParser{};
  propParser.prepare<FloatPropNativeComponentProps>();
  FloatPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"blurRadius3\\", 2.1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius4, etc) {
  RawPropsParser propParser{};
  propParser.prepare<FloatPropNativeComponentProps>();
  FloatPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"blurRadius4\\", 0));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius5, etc) {
  RawPropsParser propParser{};
  propParser.prepare<FloatPropNativeComponentProps>();
  FloatPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"blurRadius5\\", 1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(FloatPropNativeComponentProps_blurRadius6, etc) {
  RawPropsParser propParser{};
  propParser.prepare<FloatPropNativeComponentProps>();
  FloatPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"blurRadius6\\", 0));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  FloatPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture IMAGE_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/IMAGE_PROP/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ImagePropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ImagePropNativeComponentProps>();
  ImagePropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ImagePropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImagePropNativeComponentProps_thumbImage, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ImagePropNativeComponentProps>();
  ImagePropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"thumbImage\\", folly::dynamic::object(\\"url\\", \\"testurl\\")));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ImagePropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture INSETS_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/INSETS_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(InsetsPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<InsetsPropNativeComponentProps>();
  InsetsPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  InsetsPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/INT32_ENUM_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(Int32EnumPropsNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<Int32EnumPropsNativeComponentProps>();
  Int32EnumPropsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  Int32EnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture INTEGER_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/INTEGER_PROPS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(IntegerPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<IntegerPropNativeComponentProps>();
  IntegerPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  IntegerPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/INTERFACE_ONLY/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(InterfaceOnlyComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<InterfaceOnlyComponentProps>();
  InterfaceOnlyComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  InterfaceOnlyComponentProps(parserContext, sourceProps, rawProps);
}

TEST(InterfaceOnlyComponentProps_accessibilityHint, etc) {
  RawPropsParser propParser{};
  propParser.prepare<InterfaceOnlyComponentProps>();
  InterfaceOnlyComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"accessibilityHint\\", \\"foo\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  InterfaceOnlyComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture MIXED_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/MIXED_PROP/Props.h>
#include <folly/dynamic.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(MixedPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MixedPropNativeComponentProps>();
  MixedPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MixedPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/MULTI_NATIVE_PROP/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ImageColorPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ImageColorPropNativeComponentProps>();
  ImageColorPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImageColorPropNativeComponentProps_thumbImage, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ImageColorPropNativeComponentProps>();
  ImageColorPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"thumbImage\\", folly::dynamic::object(\\"url\\", \\"testurl\\")));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImageColorPropNativeComponentProps_color, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ImageColorPropNativeComponentProps>();
  ImageColorPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"color\\", 1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImageColorPropNativeComponentProps_thumbTintColor, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ImageColorPropNativeComponentProps>();
  ImageColorPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"thumbTintColor\\", 1));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(ImageColorPropNativeComponentProps_point, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ImageColorPropNativeComponentProps>();
  ImageColorPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"point\\", folly::dynamic::object(\\"x\\", 1)(\\"y\\", 1)));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ImageColorPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/NO_PROPS_NO_EVENTS/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(NoPropsNoEventsComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<NoPropsNoEventsComponentProps>();
  NoPropsNoEventsComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  NoPropsNoEventsComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture OBJECT_PROPS 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/OBJECT_PROPS/Props.h>
#include <react/renderer/components/image/conversions.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(ObjectPropsProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<ObjectPropsProps>();
  ObjectPropsProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  ObjectPropsProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture POINT_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/POINT_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(PointPropNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<PointPropNativeComponentProps>();
  PointPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  PointPropNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(PointPropNativeComponentProps_startPoint, etc) {
  RawPropsParser propParser{};
  propParser.prepare<PointPropNativeComponentProps>();
  PointPropNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"startPoint\\", folly::dynamic::object(\\"x\\", 1)(\\"y\\", 1)));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  PointPropNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/STRING_ENUM_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(StringEnumPropsNativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<StringEnumPropsNativeComponentProps>();
  StringEnumPropsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  StringEnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringEnumPropsNativeComponentProps_alignment_Top, etc) {
  RawPropsParser propParser{};
  propParser.prepare<StringEnumPropsNativeComponentProps>();
  StringEnumPropsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"alignment\\", \\"top\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  StringEnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringEnumPropsNativeComponentProps_alignment_Center, etc) {
  RawPropsParser propParser{};
  propParser.prepare<StringEnumPropsNativeComponentProps>();
  StringEnumPropsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"alignment\\", \\"center\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  StringEnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringEnumPropsNativeComponentProps_alignment_BottomRight, etc) {
  RawPropsParser propParser{};
  propParser.prepare<StringEnumPropsNativeComponentProps>();
  StringEnumPropsNativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"alignment\\", \\"bottom-right\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  StringEnumPropsNativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture STRING_PROP 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/STRING_PROP/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(StringPropComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<StringPropComponentProps>();
  StringPropComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  StringPropComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringPropComponentProps_accessibilityHint, etc) {
  RawPropsParser propParser{};
  propParser.prepare<StringPropComponentProps>();
  StringPropComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"accessibilityHint\\", \\"foo\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  StringPropComponentProps(parserContext, sourceProps, rawProps);
}

TEST(StringPropComponentProps_accessibilityRole, etc) {
  RawPropsParser propParser{};
  propParser.prepare<StringPropComponentProps>();
  StringPropComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"accessibilityRole\\", \\"foo\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  StringPropComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(MultiFile1NativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiFile1NativeComponentProps>();
  MultiFile1NativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiFile1NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFile1NativeComponentProps_disabled, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiFile1NativeComponentProps>();
  MultiFile1NativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiFile1NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFile2NativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiFile2NativeComponentProps>();
  MultiFile2NativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiFile2NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiFile2NativeComponentProps_disabled, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiFile2NativeComponentProps>();
  MultiFile2NativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"disabled\\", true));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiFile2NativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;

exports[`GenerateTests can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "Tests.cpp" => "/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateTests.js
 * */

#include <gtest/gtest.h>
#include <react/renderer/core/PropsParserContext.h>
#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/Props.h>
#include <react/renderer/core/RawProps.h>
#include <react/renderer/core/RawPropsParser.h>
#include <react/renderer/core/propsConversions.h>

using namespace facebook::react;

TEST(MultiComponent1NativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiComponent1NativeComponentProps>();
  MultiComponent1NativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiComponent1NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiComponent1NativeComponentProps_disabled, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiComponent1NativeComponentProps>();
  MultiComponent1NativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"disabled\\", false));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiComponent1NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiComponent2NativeComponentProps_DoesNotDie, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiComponent2NativeComponentProps>();
  MultiComponent2NativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"xx_invalid_xx\\", \\"xx_invalid_xx\\"));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiComponent2NativeComponentProps(parserContext, sourceProps, rawProps);
}

TEST(MultiComponent2NativeComponentProps_disabled, etc) {
  RawPropsParser propParser{};
  propParser.prepare<MultiComponent2NativeComponentProps>();
  MultiComponent2NativeComponentProps sourceProps{};
  RawProps rawProps(folly::dynamic::object(\\"disabled\\", true));

  ContextContainer contextContainer{};
  PropsParserContext parserContext{-1, contextContainer};

  rawProps.parse(propParser);
  MultiComponent2NativeComponentProps(parserContext, sourceProps, rawProps);
}",
}
`;
